--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -86,11 +86,11 @@ In this section we describe the theory of the Contract Net Protocol and the two 
 
 \taskS{Add sequence diagrams of 3 protocols (mss met kleuren werken om verschillen aan te duiden?). Best met zelfde kleuren als grafieken dan: CNET rood, CNCP groen en DynCNET blauw}
 
-\subsection{Contract Net} The Contract Net Protocol was conceived by Smith in 1980. \cite{CNET} It is a high-level protocol for communication between agents to allow distributed task execution. The high-level protocol messages have a particular structure and meaning, which means the agents can interpret them to receive information on tasks and allocations and to send replies such as bids. 
+\subsection{Contract Net} The Contract Net Protocol, or CNET, was conceived by Smith in 1980. \cite{CNET} It is a high-level protocol for communication between agents to allow distributed task execution. The high-level protocol messages have a particular structure and meaning, which means the agents can interpret them to receive information on tasks and allocations and to send replies such as bids. 
 
 CNET tries to solve the problem of assigning tasks to idle agents in the most efficient way. Moreover, this problem needs to be solved in a distributed manner, without a central authority that tracks tasks and assigns them with global knowledge.
 
-CNET relies on the negotiation of contracts between a manager and a contractor for the execution of a task. The manager launches a tender for the execution of a task and will monitor the execution and process the results once they arrive. The contractor bids on the tenders and when it wins, executes the task and submits the results to the manager. Each agent can be one of these roles for each individual task. This can also mean that an agent acts as a contractor for one task and as a manager for sub-tasks of this task to distribute the workload over several agents.
+CNET relies on the negotiation of contracts between a manager and a contractor for the execution of a task. The manager (or initiator) launches a tender for the execution of a task and will monitor the execution and process the results once they arrive. The contractor (or participant) bids on the tenders and when it wins, executes the task and submits the results to the manager. Each agent can be one of these roles for each individual task. This can also mean that an agent acts as a contractor for one task and as a manager for sub-tasks of this task to distribute the workload over several agents.
 
 The Contract Net Protocol is defined by the messages and the information that is contained within them. By having a common language for these messages, all agents can communicate with each other and new agents can immediately start listening for new messages and participate in the negotiation process. There are three types of messages: those related to task announcements, those related to bids and those for the reporting of task results.
 
@@ -98,37 +98,36 @@ A manager initiates the contract negotiation process by adversiting that task wi
 
 Whenever a task announcement arrives at an agent that wants to act as a contractor, all of these parts of the announcement allow contractors to decide whether and when to submit a bid. They add the announcement to a list of received and not expired announcements if they're eligible. The announcements in the list are ranked on interest to the agent. This ranking is a task-specific operation and is based on the information contained within the task announcement.
 
-A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task aanouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it is bound to that task. This means that it cannot bid on other tasks and already allocates its resources to that task. Only when the task expires and no message is received that the contract has been awarded, can the agent release its resources and bid on other tasks. This is done to avoid multiple task awards to one agent, which would need to be queued and would slow down the system performance. It does mean idle agents are 'blocked' until their bid is rejected, but this is reduced by allowing bids and awards before the expiration time. \commentV{klopt dit? staat precies wel in de paper maar klinkt zo raar (vooral: agents die niet awarded worden moeten toch wel nog tot expiration wachten)}
+A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task aanouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it is bound to that task. This is also called early commitment. This means that it cannot bid on other tasks and already allocates its resources to that task. Only when the task expires and no message is received that the contract has been awarded, can the agent release its resources and bid on other tasks. This is done to avoid multiple task awards to one agent, which would need to be queued and would slow down the system performance. It does mean idle agents are 'blocked' until their bid is rejected, but this is reduced by allowing bids and awards before the expiration time. \commentV{klopt dit? staat precies wel in de paper maar klinkt zo raar (vooral: agents die niet awarded worden moeten toch wel nog tot expiration wachten -- zie ook FIPA) }
 
 Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task expires, it can either award the contract to the best bidder in its list or advertise the task again. The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When it's finished, it sends a report to the manager with the results of the execution.
 
 The bidding process can be extended to allow agents that cannot or do not want to bid to respond immediately with their reason why they will not bid. Managers can then delay task announcements if no agent is ready to take up the task. An agent can respond immediately if they are ineligible, busy or give the task a low ranking. The manager can then avoid simply reissuing the task announcement when it expires, but can loosen the eligibility requirements if all agents are ineligible or wait before reissuing the task announcement if all agents are busy or not interested yet in the task.
 
-\commentV{FIPA?}
+The FIPA version of the Contract Net Protocol \cite{CNETStandard} differs from the original protocol by adding acceptance and rejection of a bid by a manager. This means a contractor is notified if its bid was rejected, which means it does not have to wait until the task expires to continue bidding on other tasks.
+
+\subsection{Contract Net with Confirmation} 
+The Contract Net With Confirmation Protocol, or CNCP, was conceived as an extension to the Contract Net Protocol by Knabe et al. in 2002. \cite{CNCP}
+
+The major shortcoming of CNET that CNCP tries to address is the early commitment by agents. If multiple managers announce a task, a contractor is only allowed to bid on one of the tasks and must then allocate its resources to that task and cannot bid on other tasks, even though it might not be awarded the task. 
+
+To resolve this issue, in the CNCP the full commitment to a task is moved to the awarding phase: if a contractor is awarded a task, only then does it allocate its resources and stop bidding on other tasks. While a bid has been submitted but the task has not been awarded yet, the contractor can continue bidding on other tasks. When a manager wants to award a task to a contractor, it first contacts that contractor with the request to accept the task. This contractor may however already been awarded a different task, in which case it will refuse the task. The manager may then try to award the task the next best contractor. This either continues until a contractor accepts the task, in which case the contractor can start executing the task and the manager can send a rejection message to the other bidders, or if no contractor accepts it, the manager can announce the task again (possibly after waiting some time).
+
+CNCP requires two more messages to allocate a task: one to request the execution of a task by the manager and one reply to this message by the contractor. If the first contacter bidder refuses, the next best bidder has to be tried and two messages need to be sent. In the worst case this means 2$n$ extra messages (with $n$ the number of bidders) must be sent.
+
+\subsection{Dynamic Contract Net}
+The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al in 2007. \cite{DynCNET}
+
+DynCNET tries to improve on CNET by adding dynamism to the allocation and execution of tasks. More specifically, it addresses the fact that an agent usually has to do some preparation when it is assigned a task before it can actually start executing this task. DynCNET allows contracts to be switched during this preparation phase.
+
+DynCNET changes the acceptance of task by a winning contractor to a provisional acceptance. This means that until further notice that contractor will execute the task and report the results. The contractor can then start its preparation for the execution of the task. During this preparation phase however, the contractor is free to continue bidding on other (new) tasks and the manager may continue announcing the task. If either receives an offer that they consider better than the current contract, they are allowed to cancel the current contract and pursue another task. As soon as a contractor finishes its preparation and starts the actual execution of the task, the contract is final. The contractor is fully committed to the task and no longer bids on other tasks. The contractor also notifies the manager that it is executing the task, which means the manager stops announcing the task.
+
+The synchronization between managers and contractor to assess their current state requires some additional messaging. If a manager cancels a contract, it needs to notify the original contractor that the task has been awarded to another agent. Inversely, a contractor that takes up another task needs to notify the manager of the original task that it is no longer committed to executing that original task. Finally the contractor needs to send a message to the manager when it starts executing the task, so the manager can stop announcing the task to other agents.
 
 
-
-\subsection{Contract Net with Confirmation} The earlier solution suffers from 1 major flaw: drones have to commit to their bid until the client accepts or declines their bid. They are not allowed to bid on other task announcements while they have a bid outstanding. As their are $n$ drones and $m$ clients, $n*m$ bids are possible in theory. In practice, only $n$ bids are sent out. In the worst case, where all drones rank the clients in the same order $O(m)$ rounds of bidding are necessary to assign all clients to drones in CNET.
-
-In CNCP, the drones are allowed to sent out multiple bids. Only when a drone receives an \texttt{AcceptProposal} message, should it commit to a bid. In case it receives multiple bids, it can choose to which bid to commit. The client to which is committed is sent an \texttt{Agree} message. From that moment on, the drone starts executing the delivery\footnote{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design}. All other clients are sent a \texttt{Disagree} message. When a client receives a \texttt{Disagree} message, it will send out a new call for proposal. This behaviour differs from \cite{CNCP}: when a client receives proposals, it will rank them and send out an \texttt{AcceptProposal} to the first one. If the first drone declines, the second drone will be sent an \texttt{AcceptProposal} and so on, until all (satisfactory) drones are sent an \texttt{AcceptProposal}. Because of the short deadlines and the high chance that the second drone has in the mean time committed to another client, we preferred to start a new bidding round.
-\commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?} 
-
-While CNCP as described in \cite{CNCP} requires an extra $O(2*n)$ messages, our design only requires one extra message per bidding round. We believe the number of bidding rounds will be reduced drastically, and therefore the total message count as well (compared to CNET).
-
-\subsection{Dynamic Contract Net} CNCP still suffers from one problem: while a drone is flying to the warehouse (and while he is charging in the warehouse before delivering the package), the world might change. Maybe another drone becomes available, or another client announces a new task. In both scenarios, it might be better to cancel the contract and start a new one. Neither CNET nor CNCP allow a drone or client to change a contract after they have committed to each other. In DynCNET, a drone can still cancel the contract, as long as it has not yet picked up the package in the warehouse. So if a better client comes along, a drone could cancel the old contract and start a new contract with this new client. Similarly, a client can break up the contract with a drone as long as this drone has not yet picked up the package. If a better drone becomes available (after it has delivered another package), the client might switch drones. It will let the old drone known that the contract has been canceled.
-
-This means that in practice, the client will keep sending calls for proposals until the drone has picked up the package. Similarly, the drone will keep bidding on task announcements until it picks up the package. From then on, both agents are 100\% committed to the contract.
-
-A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest. In our design, the agents are only limited by the battery constraint of the drones. We did not take special action to prevent the oscillation of tasks between drones.
-
-\commentY{Message loss?}
-
-\commentY{Synchronization van DynCNET: }
-\commentV{This latter then sends a message to confirm the abort.
-moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronization of abort messages}
-
-
-\subsection{Agent Architecture} Both the drone and client agents have very simple architectures. They can be modeled using simple finite state machines. 
+\subsection{Agent Architecture} 
+\commentV{waar moet dit best komen?}
+Both the drone and client agents have very simple architectures. They can be modeled using simple finite state machines. 
 
 
 \commentY{Hoort sectie over agent architecture hier? Of eventueel in andere sectie?}
@@ -171,7 +170,7 @@ In CNET and CNCP, a client can only send calls for proposals while in the \textt
         \item tijd tijdens opladen wordt niet meegerekend bij estimated cost (footnote)
     \end{itemize}}
     
-\proposalY{Our system has two types of agents: clients (who represent a package that needs to be delivered) and a drone. The two types of agents each fulfill a different role in CNET: clients fulfill the role of manager, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents \textbf{footnote}{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}. As all drones are eligible, no eligibility information is provided. The bid specification is missing as well. There is no expiration time on the call for proposal, as drones should bid as quickly as they can.
+\proposalY{\textbf{CNET: } Our system has two types of agents: clients (who represent a package that needs to be delivered) and a drone. The two types of agents each fulfill a different role in CNET: clients fulfill the role of manager, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents \textbf{footnote}{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}. As all drones are eligible, no eligibility information is provided. The bid specification is missing as well. There is no expiration time on the call for proposal, as drones should bid as quickly as they can.
     
 When drones receive task announcements, they will calculate, for every warehouse, the estimated profit \textbf{footnote}{Taking the delivery window and the probability of a crash into account} they can make on this client. Only the warehouse with maximal profit for the client is kept. This is done for all task announcements. A drone is only allowed to bid on 1 of those announcements, therefore the most profitable client is selected \textbf{footnote}{If it is economically better to not deliver any client, no bids are placed}. A propose message is sent to this client including the estimated profit the company can make on this client. Once a drone has placed a bid, he will enter the \texttt{PROPOSED\_BID} state in which he is no longer allowed to bid until either he is awarded the task and has executed it or the client refuses his bid.
 
@@ -184,6 +183,29 @@ Once the drone has received the contract from the client, it will start executin
 As said earlier, once a bid has been placed, a drone cannot bid unless the current task has been executed or his bid was declined. While \cite{CNET} suggest that this might increase delay significantly, we assumed the effect would be smaller in our design where clients assign contracts from the moments they receive bids. As a drone can only hold 1 contract, there is no need for a local scheduler within the drone.
 
 To reduce the message count significantly, drones send explicit refuse messages to clients (as answer to a call for proposal). In these messages, the reason for refusal is added. There are 3 possibilities: \texttt{BUSY} \textbf{footnote}{The drone is executing another delivery}, \texttt{LOW\_RANKING} \textbf{footnote}{The drone prefers the proposal of another client.} and \texttt{INELIGIBLE} \textbf{footnote}{It is not economically profitable for the drone to deliver to this client}. Clients will act smart based on these refusal reasons. If a \texttt{LOW\_RANKING} is received, it can send a new call for proposal immediately as it is likely that a drone was refused the contract it preferred. If only \texttt{BUSY} or \texttt{INELIGIBLE} refusals are received, a new immediate call for proposal has little chance of succeeding. We know that the drones are busy delivering other packages or are too far away. Clients can thus wait until a drone becomes available again. \cite{CNET} suggests that drones could declare when they are available and what kind of tasks they can execute so the clients can propose them instead of the other way around. We decided to give extra information to the refusal message: If busy, the refusal message also contains a lower limit on when the drone will become available again. The client can now wait with sending out new calls for proposals until this lower limit has passed.}
+
+\proposalY{\textbf{CNCP:} The earlier solution suffers from 1 major flaw: drones have to commit to their bid until the client accepts or declines their bid. They are not allowed to bid on other task announcements while they have a bid outstanding. As their are $n$ drones and $m$ clients, $n*m$ bids are possible in theory. In practice, only $n$ bids are sent out. In the worst case, where all drones rank the clients in the same order $O(m)$ rounds of bidding are necessary to assign all clients to drones in CNET.
+
+In CNCP, the drones are allowed to sent out multiple bids. Only when a drone receives an \texttt{AcceptProposal} message, should it commit to a bid. In case it receives multiple bids, it can choose to which bid to commit. The client to which is committed is sent an \texttt{Agree} message. From that moment on, the drone starts executing the delivery \textbf{footnote}{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design}. All other clients are sent a \texttt{Disagree} message. When a client receives a \texttt{Disagree} message, it will send out a new call for proposal. This behaviour differs from \cite{CNCP}: when a client receives proposals, it will rank them and send out an \texttt{AcceptProposal} to the first one. If the first drone declines, the second drone will be sent an \texttt{AcceptProposal} and so on, until all (satisfactory) drones are sent an \texttt{AcceptProposal}. Because of the short deadlines and the high chance that the second drone has in the mean time committed to another client, we preferred to start a new bidding round.
+\commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?} 
+
+While CNCP as described in \cite{CNCP} requires an extra $O(2*n)$ messages, our design only requires one extra message per bidding round. We believe the number of bidding rounds will be reduced drastically, and therefore the total message count as well (compared to CNET).}
+
+\proposalY{\textbf{DynCNET: }
+
+CNCP still suffers from one problem: while a drone is flying to the warehouse (and while he is charging in the warehouse before delivering the package), the world might change. Maybe another drone becomes available, or another client announces a new task. In both scenarios, it might be better to cancel the contract and start a new one. Neither CNET nor CNCP allow a drone or client to change a contract after they have committed to each other. In DynCNET, a drone can still cancel the contract, as long as it has not yet picked up the package in the warehouse. So if a better client comes along, a drone could cancel the old contract and start a new contract with this new client. Similarly, a client can break up the contract with a drone as long as this drone has not yet picked up the package. If a better drone becomes available (after it has delivered another package), the client might switch drones. It will let the old drone known that the contract has been canceled.
+
+This means that in practice, the client will keep sending calls for proposals until the drone has picked up the package. Similarly, the drone will keep bidding on task announcements until it picks up the package. From then on, both agents are 100\% committed to the contract.
+
+A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest. In our design, the agents are only limited by the battery constraint of the drones. We did not take special action to prevent the oscillation of tasks between drones.
+
+
+\commentY{Message loss?}
+
+\commentY{Synchronization van DynCNET: }
+\commentV{This latter then sends a message to confirm the abort.
+moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronization of abort messages}
+}
 \subsection{Comparison with existing MAS from literature}
 \outline{
     \begin{itemize}
@@ -196,6 +218,7 @@ To reduce the message count significantly, drones send explicit refuse messages 
     \end{itemize}
     }
 \commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}, zie ook \cite{DynCNET} Related work voor korte beschrijving, \cite{CNETStandard} is ook nog niet besproken bij theorie + afwijking die bij theorie al voorkomen ook nog eens herhalen?}
+\commentV{misschien bij theory gedeelte?}
 
 \commentY{Nu altijd geschreven als client-drone, aanpassen naar initiator-participant?}
 
